--- a/projects/09-pricing-section-tiers/src/index.css
+++ b/projects/09-pricing-section-tiers/src/index.css
@@ -8,11 +8,7 @@
     font-weight: 100 900;
     font-stretch: 75% 125%;
     font-style: normal;
-    src: url("../../../shared/assets/fonts/NotoSans-VariableFont.ttf")
-        format("truetype-variations"),
-      url("../../../shared/assets/fonts/NotoSans-VariableFont.woff")
-        format("woff-variations"),
-      url("../../../shared/assets/fonts/NotoSans-VariableFont.woff2")
-        format("woff2-variations");
+    src: url("../../../shared/assets/fonts/NotoSans-VariableFont_wdth,wght.ttf")
+      format("truetype-variations");
   }
 }
